--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^7.2.1",
     "firebase": "^7.14.2",
     "firestore": "^1.1.6",
+    "moment": "^2.25.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-redux": "^5.1.2",
